--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <label for="BreakFastFoods">Choose a food:</label>
 <select name="BreakFastFoods" id="BreakFastFoodss">
     <option value="ChickenTitty">Chicken Breast</option>
-  <option value="Scrambled eggs">Scrambled eggs</option>
-  <option value="ProteinShake">Protien Shake</option>
+  <option value="Scrambled eggs">Scrambled eggs!</option>
+  <option value="ProteinShake">Protien Shake!</option>
   <option value="reeses"></option>
 </select>
 <br>1
