--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 -->
     <label for="BreakFastFoods">Choose a food:</label>
 <select name="BreakFastFoods" id="BreakFastFoodss">
-    <option value="ChickenTitty">Chicken Breast</option>
+    <option value="ChickenTitty">Chicken Titty</option>
   <option value="Scrambled eggs">Scrambled eggs!</option>
   <option value="ProteinShake">Protien Shake!</option>
   <option value="reeses"></option>
