--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    
 </head>
 <body>
-    <h1>BreakFast</h1>
+    <h1>Breakfast</h1>
 <!--<label for="what food did you eat">what food did you eat today:</label>
     <input type="text" id="Foodname" Foodname="Foodname"
     placeholder="potatoes">
